--- a/Unsolved/index.html
+++ b/Unsolved/index.html
@@ -9,8 +9,16 @@
   <body>
     <header>
       <h1>Student Bio</h1>
+      <h3>Iman Pace</h3>
     </header>
     <!-- TODO: Write Your Code Below-->
+    <section>
+      <img src="https://via.placeholder.com/200" alt="place holder">
+      <p>This is a paragraph about me and everything I do. It is great and I am awesome so i will keep doing me</p>
+      <h4>Contact Info:</h4>
+      <p>Git:<a href="https://github.com/y2kRULEZ">This is a link to github</a></p>
+      <p>Email:<a href="imanpace7@gmail.com">This is my email</a></p>
+    </section>
 
   </body>
 
